--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.nav {
+/* .nav {
     position: fixed;
     top: 0;
     width: 100%;
@@ -32,4 +32,4 @@ h1 {
 
 .nav-links li a:hover {
     text-decoration: underline;
-}
+} */
